--- a/index.html
+++ b/index.html
@@ -356,32 +356,22 @@
 
   <script>
     const runningQuotes = [
-      “A run isn’t bad, it’s just a bit sub-mediocre”,  
-      “Celebrate!”,  
-      “Count your victories in as many ways as you can”,  
-      “Easy runs should feel easy”,  
-      “Every finish line is a starting line in disguise”,  
-      “Every run has a purpose.”,  
-      “Fill your life with great verbs. That will surround you with the right nouns and you will live a life that merits the best adjectives.”,  
-      “If it’s not easy, that doesn’t mean it’s too hard”,  
-      “If you aren't running, you are recovering”,  
-      “I’m talking about running. I’m also not talking about running.”,  
-      “If you can’t do the run you want, do the run you can.”,  
-      “Maybe you can’t means maybe you can”,  
-      “Play at running.”,  
-      “Release the Kraken!”,  
-      “Run smart”,  
-      “Running isn't boring, but some runners are.”,  
-      “Something is better than nothing, cause those small bits of somethingness fills up the nothingness, and soon enough you’ll have a lot of something’s”,  
-      “Struggling does not mean failure. Struggling means successfully not giving up”,  
-      “The end of one finish line is the beginning of a new starting line”,  
-      “There are no guarantees when you cross the starting line”,  
-      “This is about running, and it's also not about running”,  
-      “We do hard things not so they become easy, but so we can take on even harder things”,  
-      “We don't race to prove we're runners, we race to celebrate being runners.”,  
-      “You are a bad-ass!”,  
-      “You can get better at running, while not running”,  
-      “You don’t have to run every day to be a runner every day.”
+      "Every finish line is a starting line in disguise",
+      "We do hard things not so they become easy, but so we can take on even harder things",
+      "You can get better at running, while not running",
+      "If you aren't running, you are recovering",
+      "Celebrate!",
+      "This is about running, and it's also not about running",
+      "Easy runs should feel easy",
+      "Run smart",
+      "There are no guarantees when you cross the starting line",
+      "You are a bad-ass!",
+      "Running isn't boring, but some runners are.",
+      "Play at running.",
+      "Release the Kraken!",
+      "We don't race to prove we're runners, we race to celebrate being runners.",
+      "Count your victories in as many ways as you can",
+      "Every run has a purpose."
     ];
 
     function setRandomQuote() {
