--- a/index.html
+++ b/index.html
@@ -187,8 +187,12 @@
     .act-metric { font-size: 13px; color: var(--accent); font-feature-settings: "tnum"; }
 
     .quote-card {
-      display: flex; align-items: center; justify-content: space-between; gap: 18px;
+      display: flex; 
+      align-items: flex-start;  /* Changed from center */
+      justify-content: space-between; 
+      gap: 18px;
     }
+
     .quote-content { flex: 1; }
     .quote-text { font-size: 18px; font-weight: 500; line-height: 1.4; font-style: italic; }
     .quote-author { font-size: 12px; color: var(--muted); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 1px; }
