--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     }
 
     .quote-content { flex: 1; }
-    .quote-text { font-size: 18px; font-weight: 500; line-height: 1.4; font-style: italic; }
+    .quote-text { padding-top:10px; font-size: 18px; font-weight: 500; line-height: 1.4; font-style: italic; }
     .quote-author { font-size: 12px; color: var(--muted); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 1px; }
     .bennett-head {
       width: 64px; height: 64px; border-radius: 50%; object-fit: contain;
