--- a/index.html
+++ b/index.html
@@ -298,12 +298,17 @@
       </div>
 
       <div class="card span-2">
-        <div class="card-header">
-          <div class="card-title">This Month</div>
-        </div>
-        <div class="card-value"><span class="counter" id="month-counter" data-target="0">0</span><span class="card-unit">km</span></div>
-        <div class="card-sub" style="margin-top:8px">Month to date</div>
+      <div class="card-header">
+        <div class="card-title">Marathon Progress</div>
+        <div class="card-title">Goal: 42.2km</div>
       </div>
+      <div class="card-value"><span class="counter" id="marathon-counter" data-target="0">0</span><span class="card-unit">km</span></div>
+      <div class="progress-container">
+        <div class="progress-bar" id="marathon-progress" style="width: 0%"></div>
+      </div>
+      <div class="card-sub" style="margin-top:8px" id="marathon-percent">0% of marathon distance</div>
+      </div>
+
 
       <div class="card">
         <div class="card-header">
